--- a/learn-certs-pr/azure-data-engineer.yml
+++ b/learn-certs-pr/azure-data-engineer.yml
@@ -13,7 +13,7 @@ subTitle: Инженеры Azure Data проектируют и внедряют
 levels:
 - intermediate
 skills:
-- Реализация решений для хранения данных
+- Внедрение решений для хранения данных
 - Управление и развитие обработки данных
 - Мониторинг и оптимизация решений по работе с данными
 - Разработка решений для хранения данных Azure
@@ -53,13 +53,16 @@ resources:
 - title: Плакат с сертификатами Azure
   description: Ознакомьтесь с обзором, включающим основные сведения, ролевые и специальные сертификаты по Azure.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wyqh
+- title: Путешествие к сертификации
+  description: Узнайте о том, как пройти сертификацию на Azure Data Engineer Associate, а также о ресурсах, которые помогут вам подготовиться.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4ARli
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
 - title: Поддержка по вопросам сертификации
