--- a/learn-certs-pr/azure-iot-developer-specialty.yml
+++ b/learn-certs-pr/azure-iot-developer-specialty.yml
@@ -47,7 +47,7 @@ resources:
   description: Ознакомьтесь с обзором, включающим основные сведения, ролевые и специальные сертификаты по Azure.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wyqh
 - title: Путешествие к сертификации
-  description: Узнайте о том, как получить сертификат Azure IoT Developer Specialty и какие ресурсы помогут вам подготовиться.
+  description: Узнайте о том, как пройти сертификацию в качестве Azure IoT Developer Specialty, и какие ресурсы помогут вам подготовиться.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wyqz
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
