--- a/learn-certs-pr/azure-solutions-architect.yml
+++ b/learn-certs-pr/azure-solutions-architect.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Azure Solutions Architect Expert'
 metadata:
   title: 'Microsoft Certified: Azure Solutions Architect Expert'
-  description: «Архитектор решений Azure Solution Architects разрабатывает и внедряет решения, работающие в Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность.»
+  description: 'Архитектор решений Azure Solution Architects разрабатывает и внедряет решения, работающие в Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность.'
 uid: certification.azure-solutions-architect
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
@@ -15,7 +15,7 @@ summary: |-
   Для реализации решений, архитекторы решений Azure сотрудничает с облачными администраторами, облачными администраторами баз данных и непосредственно с клиентами.
 
   Кандидат на получение сертификата должен обладать передовым опытом и знаниями в области IT-операций, включая сетевые технологии, виртуализацию, идентификацию, безопасность, непрерывность бизнеса, аварийное восстановление, платформу данных, бюджетирование и управление. Эта роль должна управлять и контролировать то, как решения в каждой области влияют на общее решение. Кроме того, эта роль требует обладания навыками экспертного уровня в администрировании Azure и наличия опыта работы с процессами разработки Azure и процессами DevOps.
-subTitle: «Архитектор решений Azure Solution Architects разрабатывает и внедряет решения, работающие в Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность.»
+subTitle: Архитектор решений Azure Solution Architects разрабатывает и внедряет решения, работающие в Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность.
 levels:
 - advanced
 skills:
@@ -26,7 +26,7 @@ skills:
 - Проектирование мониторинга
 - Проектирование удостоверений и безопасности
 - Разработка хранилища данных
-- Хранение проектных данных
+- Разработка обеспечения непрерывности деятельности
 - Разработка инфраструктуры
 roles:
 - solution-architect
@@ -54,15 +54,9 @@ products:
 - azure-sql-database
 - azure-event-hubs
 courses:
-- uid: course.az-300t01
-- uid: course.az-300t02
-- uid: course.az-300t03
-- uid: course.az-300t04
-- uid: course.az-300t06
-- uid: course.az-301t01
-- uid: course.az-301t02
-- uid: course.az-301t03
-- uid: course.az-301t04
+- uid: course.az-303t00
+- uid: course.az-304t00
+- uid: course.az-030t00
 paths:
 - uid: learn.architect-network-infrastructure
 - uid: learn.architect-storage-infrastructure
@@ -81,13 +75,16 @@ resources:
 - title: Плакат с сертификатами Azure
   description: Ознакомьтесь с обзором, включающим основные сведения, ролевые и специальные сертификаты по Azure.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wyqh
+- title: Путешествие к сертификации
+  description: Узнайте о том, как пройти сертификацию на Azure Solutions Architect Expert, а также о ресурсах, которые помогут вам подготовиться.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AJyF
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
 - title: Поддержка по вопросам сертификации
