--- a/learn-certs-pr/microsoft-365-fundamentals.yml
+++ b/learn-certs-pr/microsoft-365-fundamentals.yml
@@ -6,7 +6,7 @@ metadata:
 uid: certification.microsoft-365-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
 summary: |-
-  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
   Докажите, что вы понимаете опции, доступные в Microsoft 365, и преимущества использования облачных сервисов, облачной модели Программное обеспечение как услуга (SaaS) и реализации облачной службы Microsoft 365.
 subTitle: Докажите, что вы понимаете опции, доступные в Microsoft 365, и преимущества использования облачных сервисов, облачной модели Программное обеспечение как услуга (SaaS) и реализации облачной службы Microsoft 365.
@@ -15,8 +15,8 @@ levels:
 skills:
 - Описание облачных концепций
 - Описание основных служб и концепций Microsoft 365
-- Описание параметров безопасности, соответствия, конфиденциальности и доверия в Microsoft 365
-- Описание опций ценообразования и поддержки Microsoft 365
+- Объяснение безопасности, соответствия, конфиденциальности и доверия к Microsoft 365
+- Описание ценообразования и поддержки Microsoft 365
 roles:
 - business-user
 - administrator
@@ -37,16 +37,16 @@ resources:
   description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35svT
 - title: Руководство по образовательным курсам и сертификациям
-  description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
+  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
-  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
+- title: Exam Replay
+  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
 - title: Поддержка по вопросам сертификации
-  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: Получить помощь через форум поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
