--- a/learn-certs-pr/power-platform-app-maker.yml
+++ b/learn-certs-pr/power-platform-app-maker.yml
@@ -2,16 +2,14 @@
 title: 'Microsoft Certified: Power Platform App Maker Associate'
 metadata:
   title: 'Microsoft Certified: Power Platform App Maker Associate'
-  description: Эта сертификация будет доступна 17 июля 2020 года или около того. Производители приложений создают решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, и в этом они обладают глубокими знаниями в области решений. Кандидаты разбираются в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовая разработка UX, анализ требований и процессов.
+  description: Производители приложений создают решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, и в этом они обладают глубокими знаниями в области решений. Кандидаты разбираются в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовая разработка UX, анализ требований и процессов.
 uid: certification.power-platform-app-maker
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></font></div>
 
   Производители приложений создают решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, и в этом они обладают глубокими знаниями в области решений. Кандидаты разбираются в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовая разработка UX, анализ требований и процессов.
-
-  <div><strong><br/>Примечание&#58; эта сертификация будет доступна 17 июля 2020 года или около того.</strong></div>
-subTitle: Эта сертификация будет доступна 17 июля 2020 года или около того. Производители приложений создают решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, и в этом они обладают глубокими знаниями в области решений. Кандидаты разбираются в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовая разработка UX, анализ требований и процессов.
+subTitle: Производители приложений создают решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, и в этом они обладают глубокими знаниями в области решений. Кандидаты разбираются в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовая разработка UX, анализ требований и процессов.
 levels:
 - intermediate
 skills:
@@ -60,6 +58,18 @@ products:
 - power-apps
 - power-virtual-agents
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wAsW
+paths:
+- uid: learn-bizapps.create-powerapps
+- uid: learn-bizapps.create-app-models-business-processes
+- uid: learn-bizapps.automate-process-using-flow
+- uid: learn-dynamics.manage-permissions-and-administration-for-common-data-service
+- uid: learn-dynamics.get-started-using-common-data-service
+- uid: learn-bizapps.understand-advanced-topics
+- uid: learn-bizapps.best-practices-environments
+- uid: learn-bizapps.create-use-analytics-reports-power-bi
+- uid: learn-bizapps.bring-ai
+- uid: learn-bizapps.ui-controls-canvas-app-powerapps
+- uid: learn-bizapps.create-business-process-flow
 exams:
 - uid: exam.pl-100
 resources:
@@ -69,7 +79,7 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay [Повтор экзамена]
+- title: Exam Replay
   description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
   href: deals.md
 - title: Поддержка по вопросам сертификации
